@@ -24,7 +24,7 @@ function(cl, data, params, model, inits, n.chains = 3, bugs.seed=1:n.chains, loa
     ## common data
     cldata <- list(data=data, params=params, model=model, inits=inits)
     ## parallel computations
-    mcmc <- mcmc.cluster(cl, 1:n.chains, bugsparallel, cldata, lib="dclone", ...)
+    mcmc <- mcmc.cluster(cl, 1:n.chains, bugsparallel, cldata, lib="dclone", load.balancing=load.balancing, ...)
     ## binding the chains
     res <- as.mcmc.list(lapply(mcmc, as.mcmc))
     ## attaching attribs and return
