@@ -5,6 +5,8 @@ Version 1.0-2, December 4, 2009
     * mcmc.cluster: internal function for parallel MCMC computations.
     * openbugs.seed: modified version of R2WinBUGS::openbugs with
       RNG seed argument (for parallel computations).
+    * dc.pfit: models with different n.clones are run parallel
+      with load balancing as default.
 
 Version 1.0-1, November 19, 2009
     * custommodel function added, fitting functions modified.
